tests/NormalTests/paczka1/fuzzy1/16908161.err
Error in line 2: UMUxa A439 93,6
Error in line 10: uo3Krh2p A868 66,0
Error in line 24: uo3Krh2p A184 9,1
Error in line 31: o2FflfAyTS A439 61,7
Error in line 27: uo3Krh2p S547 99,7
Error in line 32: o2FflfAyTS S547 19,4
